...
          data={recipes}
          keyExtractor={this.recipeKeyExtractor}
          renderItem={this.renderRecipeFlatListItem}
          contentContainerStyle={{ paddingBottom: AppTheme.defaultPadding }}
        />
        <ActionButton
          testID="addButton"
          buttonColor={AppTheme.secondaryColor}
          onPress={this.onPressAddButton}
          hideShadow
        />
      </KeyboardAvoidingView>
    );
...
